feat(dpsk): finish stage 2
